--- a/style.css
+++ b/style.css
@@ -1,22 +1,33 @@
-
-/*  Load below code inside
-    style.css for now we can
-    do it like this for
-    easier development */
     
 /*---------------------*/
 /*---ANY SCREEN SIZE---*/
 /*---------------------*/
-#random{display:block; text-align:center;}          /* hide this for now */
-#sb-site{position: relative;}   /* allow jquerry aniations on entire page */
+#random{display:block; text-align:center;}      /* hide this for now */
+#sb-site{position: relative;}                   /* allow jquerry aniations on entire page */
+
+#splash{display:none;}
+#splashContainer{
+    position:relative;
+    top:0vh;
+    opacity:0.6;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;}
+#splashTint{
+    position:absolute;
+    top:0vh;
+    background:#000;}
+.leftChange{
+    left:100%;}
+.rightChange{
+    right:100%;}
 
 /* Tomorrow Theme */
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
 .prettyprint {
   background: white;
   font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
-  font-size: 0.8rem;
-  line-height: 1.294rem;
+  font-size:0.773rem; line-height:1.250rem; /* base -1 */
   padding: 10px;
   overflow: auto;
 }
@@ -56,17 +67,20 @@
 ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
 
   /*--TYPOGRAPHY SIZING--*/
-  /* base font for mobile = 16px & 24px */
+
+  /* base font for mobile = 16px & 20px */
+  /* http://modularscale.com/scale/?px1=16&px2=20&ra1=1.618&ra2=0 */
+
   body {font-size: 1rem; line-height: 1.618rem;}
-  h1{font-size:3.927rem; line-height:4.712rem;} /*line height @ 1.2*/
-  h2{font-size:2.618rem; line-height:3.14rem;}
+  h1{font-size:2.618rem; line-height:3.141rem;} /*line height @ 1.2*/
+  h2{font-size:2.023rem; line-height:2.427rem;} /*line height @ 1.2*/
   h3{font-size:1.618rem; line-height:2.617rem;} /*line height @ 1.618*/
-  h4{font-size:1rem; line-height:1.618rem;}     /*line height @ 1.618*/
-  h5{font-size:0.927rem; line-height:1.499rem;} /*line height @ 1.618*/
-  h6{font-size:0.573rem; line-height:0.927rem;} /*line height @ 1.618*/
-  h1,h2,h3,h4,h5,h6{margin-bottom:0px;}
-  
-  
+  h4{font-size:1.25rem; line-height:2.022rem;}  /*line height @ 1.618*/
+  h5{font-size:1rem; line-height:1.618rem;}     /*line height @ 1.618*/ /* base:16px */
+  h6{font-size:0.773rem; line-height:1.250rem;} /*line height @ 1.618*/
+
+  h1,h2,h3,h4,h5,h6{margin-bottom:0px; color:#333333;}
+
   /*--HIDES--*/
   /* hides element on different sizes */
   .hideOnSmall{display:none;}
@@ -75,8 +89,8 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
 
   /*--SPACER--*/
   /* use this to space out elements evenly */
-  .space{height:3.927rem;}      /*font size of h1*/
-  .spaceSmall{height:2.618rem;} /*font size of h2*/
+  .space{height:4.235rem;}      /* h1 x1.618 */
+  .spaceSmall{height:3.27rem;}  /* h2 x1.618 */
 
   /*--BASIC--*/
   body{color:#555555;}
@@ -99,7 +113,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     margin-top:0px;}
   ul{
     margin-left:0px;
-    margin-bottom:1rem;}/* remove foundation left margin and add spacing */
+    margin-bottom:1rem;} /* remove foundation left margin and add spacing */
   ol{
     margin-bottom:1rem;}
   blockquote{
@@ -108,7 +122,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     padding-left:1rem;
     margin-left: 0px;
     color:#444444;
-    font-size:1.618rem;
+    font-size:1.618rem; /* base +2 */
     font-weight:600;
     line-height:2.617rem;
   }
@@ -194,7 +208,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   .menuIcon{
     position:absolute; 
     top:1rem; left:1rem; 
-    font-size:1.618rem; 
+    font-size:1.618rem; /* base +2 */
     cursor: pointer; 
     color:#aaaaaa;;
     z-index:10;}
@@ -209,9 +223,18 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     margin:0px;}
   .sb-slidebar ul li{
     padding-top:1rem;
-    padding-left:0.573rem;}
+    padding-left:1rem;}
   .sb-slidebar ul li a{
     color:#aaaaaa;}
+  .sb-slidebar{
+    padding-left:1rem;}
+  .sb-slidebar a{
+    font-weight:300;}
+  #slidebarTitle{
+    text-align:center;
+    margin-bottom:1rem;}
+  #slidebarTitle a{
+    font-weight:600;}
 
 
   /*--POSTS--*/
@@ -225,7 +248,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   .post p{font-weight:300;}               /* set font reading font */
   .postDate{color:#aaaaaa; padding-bottom:0.573rem;}
   .readMoreButton{font-weight: 600; margin-bottom:1rem;} 
-  #title{margin:0px; margin-bottom:0.573rem; color:#444;}
+  #title{margin:0px; margin-bottom:0.573rem; color:#333333;}
 
   /*CHAT*/    
   .chat{
@@ -291,13 +314,12 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   /*QUOTE*/
   .quote{
     font-weight:600;
-    font-size:2.618rem; 
-    line-height:3.14rem; 
+    font-size:2.023rem; line-height:3.273rem; /* base +3 */
     margin:0px; 
     text-align:center;}
   .source{ 
     font-weight:300; 
-    font-size:1rem; 
+    font-size:1rem; /* base */
     line-height:1.618rem; 
     padding-top:1rem; 
     padding-bottom:1rem; 
@@ -315,7 +337,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
 
   /*AUDIO*/
   /* h2 font-size */
-  .tumblr_audio_player{height:2.618rem;}
+  .tumblr_audio_player{height:3.272rem; } /* base +5 */
 
   /*VIDEO*/
   /* center and limit videos */
@@ -326,9 +348,8 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   /* post notes,tags and comments */
   .postFooter{padding-top:0.573rem;}
   .postStats{
-    font-size:0.8rem;
+    font-size:0.773rem; line-height:1.250rem; /* base -1 */
     font-family: 'Calluna Sans', sans-serif;
-    line-height:1.294rem;
     list-style:none;
     margin:0;
     padding:0px; 
@@ -367,11 +388,10 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   #bottomDescription,#bottomBlurb,#bottomLinks{text-align:center;}
   #bottomLinks a{
     padding-right:0.573rem;
-    font-size:0.927rem;
-    line-height:1.499rem;
+    font-size:0.773rem; line-height:1.250rem; /*base -1*/
     color:#aaaaaa;}
 
-  #bottomBlurb p{font-size:0.573rem;line-height:0.927rem;}
+  #bottomBlurb p{font-size:0.618rem;line-height:0.999rem;} /* base -2*/
   .powered{color:#dddddd;}
 
   /* ask & submit */
@@ -403,22 +423,24 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
 
   /*permalink notes*/
   ol.notes{list-style-type:none;padding:0px;}
-  ol.notes li{font-size:0.8rem;line-height:1.294rem;}
+  ol.notes li{font-size:0.773rem; line-height:1.250rem;} /* base -1 */
   ol.notes li.note{padding:0.573rem 0 0.573rem;}
-  ol.notes li.note img.avatar{display:inline;padding-right:0.573rem;}
+  ol.notes li.note img.avatar {
+    display: inline;
+    margin-right: 0.573rem;
+    padding-right:0px;
+    border-radius: 50%;}
   ol.notes li.note blockquote{
     border-left:solid 0.573rem #eee;
     margin:0.573rem; 0 0 1rem;}
     ol.notes li.note blockquote a{
     font-weight:300;
-    font-size:0.8rem;
-    line-height:1.294rem;
+    font-size:0.773rem; line-height:1.250rem;
   }
 
   /* permalink navigation */
   .permalinkPagination{
-    text-align:center;
-    font-size:0.927rem; line-height:1.499rem;}
+    text-align:center;}
   .postNav{
       display:block;
       width:100%;
@@ -429,7 +451,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   .permalinkPagination .columns{padding:0px;} /* remove spacing for permalink post buttons */
     .left{float:left;}
     .right{float:right;}
-  .hint{color:#aaaaaa; font-size:0.8rem; line-height:0.96rem;}
+  .hint{color:#aaaaaa; font-size:0.773rem; line-height:1.250rem;} /* base -1 */
 
   /* permalink footer */
   .postBottom{text-align:center;color:#aaaaaa;}
@@ -442,8 +464,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   .postAuthor
   {
       color:#aaaaaa;
-      font-size:0.8rem;
-      line-height:1.294rem;
+      font-size:0.773rem; line-height:1.250rem; /* base -1 */
       margin-top:1rem;
       margin-bottom:2rem;
       font-weight:300;
@@ -464,8 +485,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   /*--USEABLE CLASSES--*/
   .pDropCap{
     float: left; 
-    font-size: 75px; 
-    line-height: 60px; 
+    font-size: 4.235rem; /* h1 x1.618 */
     padding-top: 4px; 
     padding-right: 4px; 
     padding-left: 4px;}
@@ -475,11 +495,10 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     font-family: 'Source Code Pro';}
 
   .pBigText{
-    font-size:1.2rem; 
-    line-height: 1.941rem;}
+    font-size:1.25rem; line-height:2.022rem; /* base +1 */}
 
   .pQuote{
-    font-size:1.618rem;
+    font-size:1.618rem; /* base +2 */
     line-height:2.617rem;
     font-weight:600 !important;
     color:#444;
@@ -509,43 +528,46 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   .prettyprint {font-size: 1.175rem;line-height: 1.901rem;}
 
   /*--TYPOGRAPHY--*/
-  body {font-size: 1.375rem; line-height:2.224rem;}
-  /*base font for desktop = 22px & 30px*/
-  h1{font-size:4.909rem; line-height:5.8rem;}   /*line height @ 1.2*/
-  h2{font-size:3.6rem; line-height:4.32rem;}    /*line height @ 1.2*/
-  h3{font-size:2.225rem; line-height:3.6rem;}   /*line height @ 1.618*/
-  h4{font-size:1.375rem; line-height:2.224rem;} /*line height @ 1.618*/
-  h5{font-size:1.159rem; line-height:1.947rem;} /*line height @ 1.618*/
-  h6{font-size:0.716rem; line-height:1.158rem;} /*line height @ 1.618*/
+  body {font-size: 1.25rem; line-height:2.202rem;}
 
-  blockquote{font-size:2.225rem; line-height:3.6rem;}
+  /* base font for desktop = 20px & 24px */
+  /* http://modularscale.com/scale/?px1=20&px2=24&ra1=1.618&ra2=0 */
+
+  h1{font-size:3.272rem; line-height:3.926rem;}   /*line height @ 1.2*/
+  h2{font-size:2.427rem; line-height:2.912rem;}   /*line height @ 1.2*/
+  h3{font-size:2.023rem; line-height:3.273rem;}   /*line height @ 1.618*/
+  h4{font-size:1.5rem; line-height:2.427rem;}     /*line height @ 1.618*/
+  h5{font-size:1.25rem; line-height:2.202rem;}    /*line height @ 1.618*/ /* base:20px */
+  h6{font-size:0.927rem; line-height:1.499rem;}   /*line height @ 1.618*/
+  
+  blockquote{font-size:2.023rem; line-height:3.273rem;} /* base +2 */
 
   /*--HIDES--*/
     .hideOnSmall{display:block;}/*show hidden element on larger devices*/
     .hideOnLarge{display:none;}
   
   /*--POSTS--*/
-    .quote{font-size:3.6rem; line-height:4.32rem;}
-    .source{font-size: 1.375rem; line-height:2.224rem;}
-    .tumblr_audio_player{height:3.6rem;}
-    .postStats{font-size:1rem;line-height:1.618rem;}
+    .quote{font-size:2.427rem; line-height:3.926rem;}      /* base + 3 */
+    .source{font-size:1.25rem; line-height:2.202rem;}      /* base */
+    .tumblr_audio_player{height:3.927rem;}                 /* base + 3 */
+    .postStats{font-size:0.975rem;line-height:1.577rem;}   /* h4 - 0.4 */
 
   /*--NOTES--*/  
-    ol.notes li{font-size:1rem;line-height:1.618rem;font-family:font-family: 'Calluna Sans', sans-serif;}
-    ol.notes li.note blockquote a{font-size:1rem;line-height:1.618rem;}
+    ol.notes li{font-size:0.773rem; line-height:1.250rem;font-family:font-family: 'Calluna Sans', sans-serif;}
+    ol.notes li.note blockquote a{font-size:0.773rem; line-height:1.250rem;}
   
   /*--PERMALINK--*/
-    .postBottom p{font-size:0.975rem;line-height:1.577rem;} /* h4 - 0.4 */
-    .permalinkPagination{font-size:1.159rem; line-height:1.947rem;}
-    .postAuthor{font-size:0.975rem;line-height:1.577rem;}
+    .postBottom p{font-size:0.975rem;line-height:1.577rem;}         /* h4 - 0.4 */
+    .postAuthor{font-size:0.975rem;line-height:1.577rem;}           /* h4 - 0.4 */
+    .permalinkPagination{font-size:0.927rem; line-height:1.499rem;} /* h5 */
   
   /*--USEABLE CLASSES--*/
-    .pQuote{font-size:2.225rem; line-height:3.6rem;} /* h3 font size */
+    .pQuote{font-size:2.023rem; line-height:3.273rem;} /* h3 */
 
   /*--SPACER--*/
   /* use this to space out elements evenly */
-    .space{height:4.909rem;}
-    .spaceSmall{height:3.6rem;}
+    .space{height:5.294rem;}      /* h1 x 1.618 */
+    .spaceSmall{height:3.926rem;} /* h2 x 1.618 */
         
   /*Image align for big screens*/        
   .post .pImageLeft
@@ -603,3 +625,5 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     /*--Align images for print--*/        
 }
 /*END PRINT*/
+
+/*---*/
