--- a/style.css
+++ b/style.css
@@ -16,12 +16,6 @@ img{
     width:100%;
     padding:0px;}
 
-.permalinkPagination{float:left;width:100%;}
-
-.space{clear:both;}
-.spaceSmall{clear:both;}
-
-#random{display:block; text-align:center;}      /* hide this for now */
 #sb-site{position: relative;}                   /* allow jquerry aniations on entire page */
 
 #splash{display:none;}
@@ -127,8 +121,8 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
 
   /*--SPACER--*/
   /* use this to space out elements evenly */
-  .space{height:4.235rem;}      /* h1 x1.618 */
-  .spaceSmall{height:3.27rem;}  /* h2 x1.618 */
+  .space{height:4.235rem; clear:both;}      /* h1 x1.618 */
+  .spaceSmall{height:3.27rem; clear:both;}  /* h2 x1.618 */
 
   /*--BASIC--*/
   body{color:#555555;}
@@ -160,10 +154,8 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     padding-left:1rem;
     margin-left: 0px;
     color:#444444;
-    font-size:1.618rem; /* base +2 */
-    font-weight:600;
-    line-height:2.617rem;
-  }
+    font-size:0.773rem; line-height:1.250rem; /* base -1 */
+    font-weight:300;}
 
   /* change scrollbar for code overflow */
   pre.prettyprint::-webkit-scrollbar{width:0px}
@@ -178,34 +170,21 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
       style slidebar menu. Let's redo the
       headers, take inspiration from
       medium.com */
-  .header{
-    text-align:center;}
+  #bigTitle{font-size:3.2726rem;}
+  .header{text-align:center;}
   .header h1{
-    color:#333333;
+    color:#333333; /* set color */
     margin:0px;}
 
   .header p{
-    color:#aaaaaa;}
+    color:#aaaaaa;} /* set color */
   .header ul{
     list-style:none;
-    padding:0px; 
-    margin:1rem;}
+    padding:0px; }
   .header ul li{
     display:inline; 
     padding:0.573rem; 
-    color:#aaaaaa;}
-
-  /*logo*/
-  /*  this may need to be fixed
-      for better headers. For
-      now it creates circular
-      avatars for display */
-  #headerImage{
-    border-radius:100px}
-  #headerImageContainer{
-    background:transparent;
-    width:100px;margin:0 auto;
-    padding:0.573rem;}
+    color:#aaaaaa;} /* set color */
 
   /* social media icons colours */
   #twitter:hover{color:#55ACEE;}
@@ -220,65 +199,25 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   #github:hover{color:#171515;}
 
   /* header bacground */
-  #headerBackground /* set the background for the header */
-  {
+  #headerBackground{
     position: absolute;
-    height: 300px;
     top: 0px;
     width: 100%;
-    z-index: -10;}
-  #headerTint /* set a tint colour to overlay ontop of images */
-  {
+    z-index: -10;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;}
+
+  #headerTint{
     position: absolute;
-    height: 300px;
     top: 0px;
     width: 100%;
-    background: none; /* set option for tint colour */
     opacity: 0.6;
     z-index: -10;}
-
-
-  /*--SLIDEBARS--*/
-  /*  Come up with a new and
-      responsive way to navigate
-      through this theme. */
-  /* icon for menu */
-  .menuIcon{
-    position:absolute; 
-    top:1rem; left:1rem; 
-    font-size:1.618rem; /* base +2 */
-    cursor: pointer; 
-    color:#aaaaaa;;
-    z-index:10;}
-  /*Slidebar menu*/
-  /*  Restyle this to match
-      the rest of the theme */
-  .sb-slidebar{
-    z-index:10;}
-  .sb-slidebar ul{
-    list-style:none; 
-    padding:0px; 
-    margin:0px;}
-  .sb-slidebar ul li{
-    padding-top:1rem;
-    padding-left:1rem;}
-  .sb-slidebar ul li a{
-    color:#aaaaaa;}
-  .sb-slidebar{
-    padding-left:1rem;}
-  .sb-slidebar a{
-    font-weight:300;}
-  #slidebarTitle{
-    text-align:center;
-    margin-bottom:1rem;}
-  #slidebarTitle a{
-    font-weight:600;}
-
 
   /*--POSTS--*/
   /*  General styling for all post
       and post types */
-  .small-centered{float:none !important;} /* unfloat to center divs*/
   .posts{padding:0px; margin:0px;}        /* remove padding */
   .post{list-style:none;padding-left:0}   /* remove list-styling */
   .post img{display:block;padding-top:1rem;padding-bottom:1rem;margin:0 auto;} /*center images*/
@@ -316,8 +255,8 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     float: left;
     margin-bottom: 0;
     width: 100%;
-    overflow: hidden;
-  }
+    overflow: hidden;}
+
   .photo-slideshow .pxu-photo img {display: block;}
   .photo-slideshow.processed .pxu-photo img {width: 100%;height: auto;}
   .photo-slideshow .pxu-photo:first-child img {margin-left: 0;}
@@ -397,8 +336,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     padding-right:1rem; 
     margin-bottom:0.573rem;
     padding-top: 0.573rem;
-    padding-bottom: 0.573rem;
-  }
+    padding-bottom: 0.573rem;}
   .postStats li a{
       font-weight:300;}
   .tags a{
@@ -410,19 +348,18 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   /*--FOOTER--*/
   /* navigation */
   .navlinkContainer{padding:0px;}
-  #navlink
-  {
+  #navlink{
     text-align: center;
     width: 50%;
     background: #fafafa;
     padding-top: 1rem;
     padding-bottom: 1rem;}
   #navlink:hover{background:#eee;}
-  .left{float:left;}
-  .right{float:right;}
+    .left{float:left;}
+    .right{float:right;}
 
   /* bottom links */
-  #bottomDescription,#bottomBlurb,#bottomLinks{text-align:center;}
+  .bottom{text-align:center;}
   #bottomLinks a{
     padding-right:0.573rem;
     font-size:0.773rem; line-height:1.250rem; /*base -1*/
@@ -472,8 +409,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
     margin:0.573rem; 0 0 1rem;}
     ol.notes li.note blockquote a{
     font-weight:300;
-    font-size:0.773rem; line-height:1.250rem;
-  }
+    font-size:0.773rem; line-height:1.250rem;}
 
   /* permalink navigation */
   .permalinkPagination{
@@ -483,41 +419,45 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
       width:50%;
       background:#fafafa;
       padding-top:1rem;
-      padding-bottom:1rem;}
+      padding-bottom:1rem;
+      float:inherit;}
   .postNav:hover{background:#eee;}
   .permalinkPagination .columns{padding:0px;} /* remove spacing for permalink post buttons */
-    .left{float:left;}
-    .right{float:right;}
   .hint{color:#aaaaaa; font-size:0.773rem; line-height:1.250rem;} /* base -1 */
+  .permalinkPagination{float:left;width:100%;}
 
   /* permalink footer */
   .postBottom{text-align:center;color:#aaaaaa;}
   .postBottom h3{margin:0px;}
   .postBottom ul{list-style:none;padding:0px;margin:0rem;}
   .postBottom ul li{display:inline;padding-right:0.573rem;color:#aaaaaa;}
-  .postBottom p{font-size:0.8rem;line-height:1.294rem;}
+  .postBottom p{font-size:0.8rem;line-height:1.294rem; margin:0px;}
   
   /* permalink author */
-  .postAuthor
-  {
+  .postAuthor{
       color:#aaaaaa;
       font-size:0.773rem; line-height:1.250rem; /* base -1 */
       margin-top:1rem;
       margin-bottom:2rem;
       font-weight:300;
-      text-align:left;
-  }
-  .postAuthor a
-  {
-      font-weight:300;
-  }
-  .postAuthorImage
-  {
+      text-align:left;}
+  .postAuthor a{
+      font-weight:300;}
+  .postAuthorImage{
       display:inline !important;
       padding:0px !important;
-      border-radius:50%;
-  }
+      border-radius:50%;}
 
+  /* recent post */
+  #recent{
+    cursor: pointer;
+    padding-top:1rem;
+    padding-bottom:1rem;
+    background:#eee;}
+  #recentAuthor, #recentDate{
+    font-size: .975rem;
+    line-height: 1.577rem;
+    font-weight:300;}
 
   /*--USEABLE CLASSES--*/
   .pDropCap{
@@ -577,7 +517,9 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#eee;}
   h5{font-size:1.25rem; line-height:2.202rem;}    /*line height @ 1.618*/ /* base:20px */
   h6{font-size:0.927rem; line-height:1.499rem;}   /*line height @ 1.618*/
   
-  blockquote{font-size:2.023rem; line-height:3.273rem;} /* base +2 */
+  blockquote{font-size:0.927rem; line-height:1.499rem;} /* base -1 */
+
+  #bigTitle{font-size:3.927rem;} 
 
   /*--HIDES--*/
     .hideOnSmall{display:block;}/*show hidden element on larger devices*/
