--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-    
+
+
 /*---------------------*/
 /*---ANY SCREEN SIZE---*/
 /*---------------------*/
@@ -59,6 +60,11 @@ img{
   transform: translate(100%);}
 .fadeAnimate{
   opacity:0;}
+.slideUp{
+  opacity:0;
+  -ms-transform: translateY(-50%); /* IE 9 */
+  -webkit-transform: translateY(-50%); /* Chrome, Safari, Opera */
+  transform: translateY(-50%);}
 
 /* Tomorrow Theme */
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
