--- a/style.css
+++ b/style.css
@@ -4,9 +4,6 @@
 /*---ANY SCREEN SIZE---*/
 /*---------------------*/
 
-
-
-
 body{margin:0px;}
 #sb-site{position: relative;} /* allow jquerry aniations on entire page */
 
@@ -25,9 +22,10 @@ img{
 .section{margin-bottom:1rem;}
 
 /*SPLASH*/
+.postHead{z-index:2;}
 #splash{display:none;}
+#splashFade{display: none;}
 #splashContainer{
-    position:relative;
     top:0vh;
     width: 100vw;
     height: 60vh;
@@ -43,6 +41,13 @@ img{
     height: 60vh;
     display: none;
     background:#000;}
+#splashGradient{
+    display:none;
+    position:absolute;
+    width:100%;
+    height:60vh;
+    z-index:1;
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 60%,rgba(255,255,255,0.9) 80%,rgba(255,255,255,1) 100%);}
 
 /*ANIMATIONS*/
 #sb-site{
@@ -173,7 +178,7 @@ ol.linenums {margin-top: 0;margin-bottom: 0;color:#dddddd;}
 
   /*--HEADER--*/
   #bigTitle{font-size:3.2726rem;}
-  .header{text-align:center;}
+  .header{text-align:center; z-index:2;}
   .header p{
     max-width:600px;
     margin:0 auto;}
